# libstk

./: .gitignore  Doxyfile  LICENSE  Makefile.am  README.md  autogen.sh  bootstrap  configure.ac
docs/: Doxyfile.in
examples/: Makefile  list_eg.c  stk_eg  stk_eg.c
src/: Makefile.am  configure.ac  list.h  stk.c  stk.h
test/: Makefile  list_test.c  stk_test.c
