## ===========================================================================
## @file    Makefile.am
## @brief   automake configuration file for library
## @author  Tamas Dezso <dezso.t.tamas@gmail.com>
## @date    March 28, 2017
##
## Process this file with automake (autoreconf -i) to produce Makefile.in.
## ===========================================================================

ACLOCAL_AMFLAGS = -I m4 --install

lib_LTLIBRARIES = libstk.la
include_HEADERS = src/list.h src/stk.h
libstk_la_SOURCES = src/stk.c

#doc_DATA = README.md
