## ===========================================================================
## @file    Makefile.am
## @brief   automake configuration file for static library
## @author  Tamas Dezso <dezso.t.tamas@gmail.com>
## @date    March 22, 2017
##
## to be processed with automake in order to produce Makefile.in
## ===========================================================================

lib_LIBRARIES = libstk.a
include_HEADERS = list.h stk.h
libstk_a_SOURCES = stk.c
